# rt-systems

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  main.txt  tempos.md
main/src/dsp/: signal.c  signal.h
main/src/hardware/bluetooth/: bluetooth.c  bluetooth.h  bt_app_core.c
main/src/hardware/button/: button.h  buttons.c  buttons.h
main/src/hardware/display/: display.c  display.h
main/src/hardware/led/: led.c  led.h
main/src/hardware/microphone/: mic.c  mic.h
main/src/ui/: ui.c  ui.h
main/src/utils/: audio_utils.c  audio_utils.h
